Message right aligning fixed. UI example added in README

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -32,6 +32,8 @@
         max-width: 768px;
         flex: 1;
         display: flex;
+        flex-direction: column;
+        align-items: stretch;
         background-color: #21211f;
         border: 1px solid #dddcdb;
         border-radius: 8px;
